--- a/views/layouts/head.html
+++ b/views/layouts/head.html
@@ -1,4 +1,4 @@
-<title>Vulnerable Web App</title>
+<title>Vulnerable Web App - Agustin Jose Wawrzyk</title>
 <style>
     @font-face{
         font-family:'Lato-Lig';
